--- a/static/styles/activities.css
+++ b/static/styles/activities.css
@@ -12,7 +12,11 @@ h2 {
     justify-content: center;    
 }
 
-#activities {
+#leadership {
     display: flex;
     justify-content: center;
+}
+
+#scholarship {
+
 }
