--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -5,10 +5,26 @@ body {
 
 #pages-bar {
     display: flex;
-    justify-content: start;
+    justify-content: space-evenly;
 }
 
 #container {
     display: flex;
     justify-content: center;
 }
+
+.page-button {
+    border: purple;
+    border-width: 20px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 32px;
+    margin: 4px 2px;
+    cursor: pointer;
+
+    background-color: black;
+    border-radius: 20px;
+  }
