--- a/static/styles/activities.css
+++ b/static/styles/activities.css
@@ -12,18 +12,32 @@ h2 {
     justify-content: center;    
 }
 
+body {
+    background-image: url('../../images/activities-background.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
 .vertical-container {
     display: flex;
     flex-direction: column;
 }
 
+.vertical-container2 {
+    display: flex;
+    flex-direction: column;
+    background-color: white; 
+    
+}
+
 #leadership {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 #scholarship {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 
 }
