--- a/static/styles/activities.css
+++ b/static/styles/activities.css
@@ -19,16 +19,30 @@ body {
     background-size: cover;
 }
 
+#pages-bar {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.page-button {
+    border: purple;
+    border-width: 20px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 32px;
+    margin: 4px 2px;
+    cursor: pointer;
+
+    background-color: black;
+    border-radius: 20px;
+}
+
 .vertical-container {
     display: flex;
     flex-direction: column;
-}
-
-.vertical-container2 {
-    display: flex;
-    flex-direction: column;
-    background-color: white; 
-    
 }
 
 #leadership {
@@ -36,8 +50,31 @@ body {
     justify-content: space-evenly;
 }
 
+.vertical-container2 {
+    display: flex;
+    flex-direction: column;
+    background-color: white; 
+    border-radius: 30px;
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 15px;
+    
+}
+
 #scholarship {
     display: flex;
     justify-content: space-evenly;
 
+}
+
+.vertical-container3 {
+    display: flex;
+    flex-direction: column;
+    background-color: white; 
+    border-radius: 30px;
+    text-align: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
 }
