--- a/static/styles/links.css
+++ b/static/styles/links.css
@@ -12,6 +12,27 @@ h2 {
     justify-content: center;    
 }
 
+#pages-bar {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.page-button {
+    border: purple;
+    border-width: 20px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 32px;
+    margin: 4px 2px;
+    cursor: pointer;
+
+    background-color: black;
+    border-radius: 20px;
+}
+
 #links {
     display: flex;
     justify-content: space-around;
