--- a/static/styles/activities.css
+++ b/static/styles/activities.css
@@ -1,5 +1,9 @@
 body {
-    color: green
+    color: green;
+    background-image: url('../../images/activities-background.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 h1 {
@@ -12,22 +16,16 @@ h2 {
     justify-content: center;    
 }
 
-body {
-    background-image: url('../../images/activities-background.png');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-}
-
 #pages-bar {
     display: flex;
     justify-content: space-evenly;
+    background-color: black;
 }
 
 .page-button {
     border: purple;
     border-width: 20px;
-    color: white;
+    color: black;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -36,7 +34,7 @@ body {
     margin: 4px 2px;
     cursor: pointer;
 
-    background-color: black;
+    background-color: beige;
     border-radius: 20px;
 }
 
