--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -1,11 +1,15 @@
-
 body {
+    background-image: url('../../images/activities-background.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
     color: blue
 }
 
 #pages-bar {
     display: flex;
     justify-content: space-evenly;
+    background-color: black;
 }
 
 #container {
@@ -16,7 +20,7 @@ body {
 .page-button {
     border: purple;
     border-width: 20px;
-    color: white;
+    color: black;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -25,6 +29,6 @@ body {
     margin: 4px 2px;
     cursor: pointer;
 
-    background-color: black;
+    background-color: beige;
     border-radius: 20px;
 }
