--- a/static/styles/links.css
+++ b/static/styles/links.css
@@ -15,12 +15,13 @@ h2 {
 #pages-bar {
     display: flex;
     justify-content: space-evenly;
+    background-color: black;
 }
 
 .page-button {
     border: purple;
     border-width: 20px;
-    color: white;
+    color: black;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -29,7 +30,7 @@ h2 {
     margin: 4px 2px;
     cursor: pointer;
 
-    background-color: black;
+    background-color: beige;
     border-radius: 20px;
 }
 
