--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../../images/activities-background.png');
+    background-image: url('images/home-background.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
