--- a/static/styles/activities.css
+++ b/static/styles/activities.css
@@ -18,7 +18,7 @@ h2 {
 
 #pages-bar {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     background-color: black;
 }
 
