--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -1,14 +1,18 @@
 body {
-    background-image: url('images/home-background.png');
+    background-image: url('../../images/home-background.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    color: blue
+}
+
+h1 {
+    color: black;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #pages-bar {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     background-color: black;
 }
 
