--- a/static/styles/links.css
+++ b/static/styles/links.css
@@ -14,7 +14,7 @@ h2 {
 
 #pages-bar {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     background-color: black;
 }
 
