--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -5,7 +5,7 @@ body {
     background-size: cover;
 }
 
-h1 {
+#title { 
     color: black;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
