--- a/static/styles/links.css
+++ b/static/styles/links.css
@@ -1,7 +1,3 @@
-body {
-    color: purple
-}
-
 h1 {
     display: flex;
     justify-content: center;
@@ -37,4 +33,10 @@ h2 {
 #links {
     display: flex;
     justify-content: space-around;
+}
+
+#title {
+    color: purple;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
 }
