Updated scholarships and activities

--- a/static/styles/scholarships.css
+++ b/static/styles/scholarships.css
@@ -1,9 +1,15 @@
+body {
+    color: darkred;
+    background-image: url('../../images/scholarships-background.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 #title {
     display: flex;
     justify-content: center;
-    color: green;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
 }
 
 #pages-bar {
