--- a/static/styles/projects.css
+++ b/static/styles/projects.css
@@ -1,3 +1,11 @@
+body {
+
+    background-color: grey;
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+
 #pages-bar {
     display: flex;
     justify-content: center;
@@ -18,4 +26,8 @@
 
     background-color: beige;
     border-radius: 20px;
+}
+
+#title {
+
 }
